no banner for now

--- a/_includes/_featured.html
+++ b/_includes/_featured.html
@@ -13,7 +13,7 @@
                 </figure>
               </li>
               <li class="infos">
-                  <p class="title">{{ post.title }}<span class="status-icon status-icon-favorite"></span></p>
+                  <p class="title">{{ post.title }}<span class="status-icon status-icon-bookmark"></span></p>
                 {% if post.description %}
                   <p class="description">{{ post.description  | truncate: 220, '...' }}</p>
                   {% else %}
