--- a/_includes/_skills.html
+++ b/_includes/_skills.html
@@ -11,7 +11,7 @@
     </div>
     <hr>
     <div class="post-item">
-      <span>Brand & Art direction</span>
+      <span>Brand & art direction</span>
     </div>
     <hr>
     <div class="post-item">
@@ -19,7 +19,7 @@
     </div>
     <hr>
     <div class="post-item">
-      <span>Front-End Development</span>
+      <span>Front-end development</span>
     </div>
     <hr>
   </div>
