--- a/_includes/_hero.html
+++ b/_includes/_hero.html
@@ -267,7 +267,7 @@
       <div class="pattern pattern--dot"></div>
     </div>
     <h1>Hello<span class="move">,</span><br><br>I'm {{ site.author }}, <span>a <b class="tooltip"><span>Research, writing, User Interfaces, Information Architecture, Visual design, Prototyping, Front-end development.</span>product designer</b></span> based in <i>{{ site.local }}</i>.</h1>
-    <p>I enjoy working on branding, product design, and strategy with passionate people. Create compelling and simple-to-use designs whether it's a website or an interface.</p>
+    <p>I enjoy working on branding, product design, and strategy with passionate people. I create compelling and simple-to-use designs, whether it's a website or an interface.</p>
     <br>
     <a href="/p/1988/profile.html" class="button button--combo">About page<span class="status-icon status-icon-direction"></span></a>
     <a href="mailto:{{ site.email }}" class="button button--combo button--green email">Email me<span class="status-icon status-icon-mail status-icon-mail-white"></span></a>
