--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -359,6 +359,10 @@ a#top-nav{
   // Background hack
   :link{  padding: 0;}
 
+  :visited{
+    color: red;
+  }
+
   &::before{
     content:'';
     position: absolute;
@@ -463,7 +467,7 @@ a#top-nav{
   figure {
     position: relative;
     display: inline-block;
-    height: $spacing-unit*3;
+    height: $spacing-unit*2;
     width: $spacing-unit*2;
     overflow: hidden;
     border-radius: $radius;
@@ -551,9 +555,10 @@ a#top-nav{
     border-radius: $radius;
 
     @media screen and (max-width: $on-palm) {
-      height: $on-palm;
-      width: 100%;
-      margin: 0 auto $spacing-unit  ;
+      height: $spacing-unit*8;
+      width: $spacing-unit*8;
+      margin: 0 auto $spacing-unit;
+      border-radius: $radius;
     }
 
     img {
@@ -609,8 +614,14 @@ a#top-nav{
   img {
     height: auto;
     width: 100%;
-    margin: $spacing-unit auto;
     border-radius: $radius;
+    margin: $spacing-unit auto $spacing-unit/2;
+
+
+    @media screen and (max-width: $on-palm) {
+      margin: 0 auto;
+    }
+
 
     @media screen and (min-width: $content-width*1.25) {
       width: $content-width*2;
