--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -1,5 +1,5 @@
 <footer class="site-footer">
   <ul>
-    <li>{{ site.title }}<br><br>last update on {{ site.time | date_to_string }}</li>
+    <li>{{ site.title }}<br><br>last update on {{ site.time | date_to_string }}<br><br>Reviewed by Elisabeth Cramer.</li>
   </ul>
 </footer>
